[project]
name = "BG_Flood_Docs"
description = "BG_Flood Documentation. Generation of the documentation for the code BG_Flood using Doxygen and Mkdocs."
readme = "README_doc.md"
authors = [
    { name = "Alice Harang", email = "alice.harang@niwa.co.nz" },
    { name = "Cyprien Bosserelle", email = "cyprien.bosserelle@niwa.co.nz"},
]
requires-python = ">= 3.13.7"

dynamic = ["version"]

dependencies= [
    "mkdocs-material>=9.6",
    "mkdoxy>=1.2.8",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-glightbox>=0.4",
    "pypandoc-binary>=1.15",
    "mkdocs-video>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/CyprienBosserelle/BG_Flood"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
